--- a/src/app/pages/browse/browse.component.html
+++ b/src/app/pages/browse/browse.component.html
@@ -1,5 +1,14 @@
 <!-- component -->
- <app-header></app-header>
- <app-banner></app-banner>
- <app-movie-carousel></app-movie-carousel>
- <app-movie2></app-movie2>
+<app-header></app-header>
+<app-banner [bannerTitle]="(bannerDetail$ | async)?.original_title" [bannerOverview]="(bannerDetail$ | async)?.overview" [key]="(bannerVideo$ | async)?.results[0].key" [movieId]="bannerMovieId"/>
+<app-movie-carousel [title]="'Popular on Netflix'" [videoContents]="movies" />
+
+<app-movie-carousel [title]="'Trending TV shows'" [videoContents]="tvShows" />
+
+<app-movie-carousel [title]="'Now Playing Movies'" [videoContents]="nowPlayingMovies" />
+
+<app-movie-carousel [title]="'Popular Movies'" [videoContents]="popularMovies" />
+
+<app-movie-carousel [title]="'Top Rated Movies'" [videoContents]="topRatedMovies" />
+
+<app-movie-carousel [title]="'Upcoming Movies'" [videoContents]="upcomingMovies" />
