--- a/src/app/shared/components/movie-carousel/movie-carousel.component.html
+++ b/src/app/shared/components/movie-carousel/movie-carousel.component.html
@@ -1,166 +1,23 @@
 <div class="container px-20 mt-14 mb-20">
-  <p class="font-semibold text-2xl my-3 ml-3">Popular Movies</p>
+  <p class="font-semibold text-2xl my-3 ml-3">{{title}}</p>
   <div #swiperContainer class="swiper-container">
     <div class="swiper-wrapper">
-      <ng-container *ngFor="let movie of [1]">
-        <div class="swiper-slide relative">
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQU0XKzKJH8L_gCbd_PkK1oxrZiSQWWo1FyEA&s"
-            alt=""
-          />
-          <div class="desc p-2">
-            <span class="text-base flex flex-wrap font-bold"
-              >The Dark Knight</span
-            >
-            <p class="text-xs my-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
-              aspernatur sed velit nesciunt blanditiis officiis minus nulla
-              cumque ullam fuga.
+      <ng-container *ngFor="let movie of videoContents">
+        <button (mouseenter)="setHoverMovie(movie)" (mouseleave)="clearHoverMovie()" (click)="onMovieClick(movie.id)" class="swiper-slide relative cursor-pointer p-0 border-0 bg-transparent" type="button">
+          <img [src]="movie.poster_path | image" alt="{{movie.title}}" />
+          <div @fade *ngIf="(movie.title === this.selectedContent) || (movie.name === this.selectedContent)" class="desc p-2">
+            <span class="text-base flex flex-wrap font-bold">{{movie.original_title}}</span>
+            <p class="text-xs my-3 whitespace-normal">
+              {{movie.overview | description:150}}
             </p>
             <div class="py-3 absolute w-[90%] bottom-1">
               <p class="text-xs flex justify-between items-center">
-                <span class="text-green-500">Vote Average:8.7</span>
-                <i
-                  class="fa fa-2x fa-chevron-circle-down"
-                  aria-hidden="true"
-                ></i>
+                <span class="text-green-500">Vote Average: {{movie.vote_average}}</span>
+                <i class="fa fa-2x fa-chevron-circle-down" aria-hidden="true"></i>
               </p>
             </div>
           </div>
-        </div>
-      </ng-container>
-      <ng-container *ngFor="let movie of [1]">
-        <div class="swiper-slide relative">
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQU0XKzKJH8L_gCbd_PkK1oxrZiSQWWo1FyEA&s"
-            alt=""
-          />
-          <div class="desc p-2">
-            <span class="text-base flex flex-wrap font-bold"
-              >The Dark Knight</span
-            >
-            <p class="text-xs my-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
-              aspernatur sed velit nesciunt blanditiis officiis minus nulla
-              cumque ullam fuga.
-            </p>
-            <div class="py-3 absolute w-[90%] bottom-1">
-              <p class="text-xs flex justify-between items-center">
-                <span class="text-green-500">Vote Average:8.7</span>
-                <i
-                  class="fa fa-2x fa-chevron-circle-down"
-                  aria-hidden="true"
-                ></i>
-              </p>
-            </div>
-          </div>
-        </div>
-      </ng-container>
-      <ng-container *ngFor="let movie of [1]">
-        <div class="swiper-slide relative">
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQU0XKzKJH8L_gCbd_PkK1oxrZiSQWWo1FyEA&s"
-            alt=""
-          />
-          <div class="desc p-2">
-            <span class="text-base flex flex-wrap font-bold"
-              >The Dark Knight</span
-            >
-            <p class="text-xs my-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
-              aspernatur sed velit nesciunt blanditiis officiis minus nulla
-              cumque ullam fuga.
-            </p>
-            <div class="py-3 absolute w-[90%] bottom-1">
-              <p class="text-xs flex justify-between items-center">
-                <span class="text-green-500">Vote Average:8.7</span>
-                <i
-                  class="fa fa-2x fa-chevron-circle-down"
-                  aria-hidden="true"
-                ></i>
-              </p>
-            </div>
-          </div>
-        </div>
-      </ng-container>
-      <ng-container *ngFor="let movie of [1]">
-        <div class="swiper-slide relative">
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQU0XKzKJH8L_gCbd_PkK1oxrZiSQWWo1FyEA&s"
-            alt=""
-          />
-          <div class="desc p-2">
-            <span class="text-base flex flex-wrap font-bold"
-              >The Dark Knight</span
-            >
-            <p class="text-xs my-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
-              aspernatur sed velit nesciunt blanditiis officiis minus nulla
-              cumque ullam fuga.
-            </p>
-            <div class="py-3 absolute w-[90%] bottom-1">
-              <p class="text-xs flex justify-between items-center">
-                <span class="text-green-500">Vote Average:8.7</span>
-                <i
-                  class="fa fa-2x fa-chevron-circle-down"
-                  aria-hidden="true"
-                ></i>
-              </p>
-            </div>
-          </div>
-        </div>
-      </ng-container>
-      <ng-container *ngFor="let movie of [1]">
-        <div class="swiper-slide relative">
-          <img
-            src="https://m.media-amazon.com/images/I/91zTlD7AY1L.jpg"
-            alt=""
-          />
-          <div class="desc p-2">
-            <span class="text-base flex flex-wrap font-bold">Animal</span>
-            <p class="text-xs my-3">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem
-              necessitatibus nostrum ratione magni repudiandae! Eveniet
-              inventore in tenetur quae quibusdam!
-            </p>
-            <div class="py-3 absolute w-[90%] bottom-1">
-              <p class="text-xs flex justify-between items-center">
-                <span class="text-green-500">Vote Average:8.2</span>
-                <i
-                  class="fa fa-2x fa-chevron-circle-down"
-                  aria-hidden="true"
-                ></i>
-              </p>
-            </div>
-          </div>
-        </div>
-      </ng-container>
-      <ng-container *ngFor="let movie of [1]">
-        <div class="swiper-slide relative">
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRQxdM5s7xOA9M0hG3Dxm-YowKWUWvKuJ6Jg&s"
-            alt=""
-          />
-          <div class="desc p-2">
-            <span class="text-base flex flex-wrap font-bold"
-              >SpiderMan-HomeComing</span
-            >
-            <p class="text-xs my-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Accusantium est necessitatibus molestiae, sapiente consectetur
-              repellat sint cumque. Minima, earum officia.
-            </p>
-            <div class="py-3 absolute w-[90%] bottom-1">
-              <p class="text-xs flex justify-between items-center">
-                <span class="text-green-500">Vote Average:8.2</span>
-                <i
-                  class="fa fa-2x fa-chevron-circle-down"
-                  aria-hidden="true"
-                ></i>
-              </p>
-            </div>
-          </div>
-        </div>
+        </button>
       </ng-container>
     </div>
   </div>
